<resources>
    <string name="app_name">Todo4U</string>
    <string name="web_client_id">43971626253-7sqid2njst58ogjtk7dura9n45516jbs.apps.googleusercontent.com</string>
    <string name="create_todo">Create Todo</string>
    <string name="todo_title">Todo title</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="select_deadline">Select deadline:</string>
    <string name="select_board">Select board</string>
    <string name="select_member">Select member</string>
    <string name="select_reminder">Select reminder</string>
    <string name="my_todos">My Todos</string>
    <string name="friends">Friends</string>
    <string name="settings">Settings</string>
    <string name="my_boards">My Boards</string>
    <string name="action_logout">Log out</string>
    <string name="welcome_message">welcomeMessage</string>
    <string name="your_nickname">Your nickname</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="create_board">Create board</string>
    <string name="board_title">Board title</string>
    <string name="description">Description</string>
    <string name="change_theme">Change theme</string>
    <string name="night_mode">Night mode</string>
    <string name="language_settings">Language settings</string>
    <string name="magyar">Hungarian</string>
    <string name="english">English</string>
    <string name="delete_profile">Delete profile</string>
    <string name="board_description">Description</string>
    <string name="board_name">Board name</string>
    <string name="board_owner">Owner</string>
    <string name="todo_name">Todo Name</string>
    <string name="todo_deadline">Deadline</string>
    <string name="todo_description">Description</string>
    <string name="nickname">Nickname</string>
    <string name="add_board">Add board</string>
    <string name="myboards">My Boards</string>
    <string name="mytodos">My Todos</string>
    <string name="add_todo">Add Todo</string>
    <string name="create_to_do">Create To Do</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="see_your_todos_or_add_a_new_one">See your todos or add a new one</string>
</resources>