<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation.xml"
    app:startDestination="@+id/fragment_create_board">

    <fragment
        android:id="@+id/fragment_create_todo"
        android:name="com.example.todo4u.Fragments.CreateTodoFragment"
        android:label="@string/create_todo"/>

    <fragment
        android:id="@+id/fragment_create_board"
        android:name="com.example.todo4u.Fragments.CreateBoardFragment"
        android:label="@string/create_board"/>

    <fragment
        android:id="@+id/fragment_blank"
        android:name="com.example.todo4u.Fragments.BlankFragment"
        android:label="@string/hello_blank_fragment"/>

    <fragment
        android:id="@+id/menu_myBoards"
        android:name="com.example.todo4u.Fragments.BoardsFragment"
        android:label="@string/my_boards"/>

</navigation>